--- a/frontend/Chalk/MainWindow.axaml
+++ b/frontend/Chalk/MainWindow.axaml
@@ -2,12 +2,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:viewmodels="clr-namespace:Chalk.viewmodels"
         xmlns:views="clr-namespace:Chalk.views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        Width="800" Height="450"
         x:Class="Chalk.MainWindow"
         Icon="/assets/avalonia-logo.ico"
-        Title="Chalk">
-
+        Title="Chalk SIS">
     <views:MainView />
 </Window>
