--- a/frontend/Chalk/MainWindow.axaml
+++ b/frontend/Chalk/MainWindow.axaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         Width="800" Height="450"
         x:Class="Chalk.MainWindow"
-        Icon="/assets/avalonia-logo.ico"
+        Icon="/assets/chalk-logo.ico"
         Title="Chalk SIS">
     <views:MainView />
 </Window>
