--- a/frontend/Chalk/views/LoginView.axaml
+++ b/frontend/Chalk/views/LoginView.axaml
@@ -25,7 +25,7 @@
         </Style>
 
         <Style Selector="Button">
-            <Setter Property="Background" Value="#026fc7" />
+            <Setter Property="Background" Value="{Binding AccentColor}" />
             <Setter Property="CornerRadius" Value="8" />
 
             <Style Selector="^:pointerover /template/ ContentPresenter#PART_ContentPresenter">
