--- a/frontend/Chalk/views/FrameView.axaml
+++ b/frontend/Chalk/views/FrameView.axaml
@@ -18,8 +18,8 @@
                 <Button HorizontalAlignment="Stretch" Command="{Binding NavigateToHomeCommand}">
                     Home
                 </Button>
-                <Button HorizontalAlignment="Stretch" Command="{Binding NavigateToHomeCommand}">
-                    Home
+                <Button HorizontalAlignment="Stretch" Command="{Binding NavigateToAdminSubjectsCommand}">
+                    Subjects
                 </Button>
             </StackPanel>
         </Border>
