API adatszerkezet frissítve, WPF-ben az adatok tesztelésre előkészítve

--- a/VS Solution/IKT_II_Derecske_Holding_EE/Ablakok/Login/LoginPanel.xaml
+++ b/VS Solution/IKT_II_Derecske_Holding_EE/Ablakok/Login/LoginPanel.xaml
@@ -7,6 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
         <DataGrid Margin="20" x:Name="TestGrid"></DataGrid>
     </Grid>
 </UserControl>
