--- a/VS Solution/IKT_II_Derecske_Holding_EE/Ablakok/TanarPanel/TanarPanel.xaml
+++ b/VS Solution/IKT_II_Derecske_Holding_EE/Ablakok/TanarPanel/TanarPanel.xaml
@@ -42,19 +42,18 @@
         </Grid>
         <Grid>
             <TabControl TabStripPlacement="right">
-                <TabItem Header="General">
+                <TabItem Header="Osztályok">
                     <Grid>
                         <Grid >
                             <TabControl TabStripPlacement="Bottom">
-            <TabItem Header="Jegyek Bevitele">
+                                <TabItem Header="Jegyek Bevitele">
                                     <Grid>
                                         <Grid.RowDefinitions>
-                                            <RowDefinition/>
-                                            <RowDefinition Height="10*"/>
-                                            <RowDefinition/>
+                                            <RowDefinition></RowDefinition>
+                                            <RowDefinition Height="8*"></RowDefinition>
                                         </Grid.RowDefinitions>
-                                        <StackPanel Grid.Row="1">
-                                            <ComboBox Width="120" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                                        <StackPanel>
+                                            <ComboBox HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="100" />
                                         </StackPanel>
                                         <DataGrid Margin="20" x:Name="TanuloJegyekGrid" AutoGenerateColumns="False" Grid.Row="1">
                                             <DataGrid.Columns>
@@ -62,41 +61,50 @@
                                                 <DataGridTextColumn Header="Jegy" Binding="{Binding Jegy_Ertek}"></DataGridTextColumn>
                                             </DataGrid.Columns>
                                         </DataGrid>
+
+                                        
                                     </Grid>
-            </TabItem>
-            <TabItem Header="Összes Adat">
-                                    <DataGrid Margin="20" x:Name="TanuloAdatokGrid" AutoGenerateColumns="False" Grid.Row="1">
-                                        <DataGrid.Columns>
-                                            <DataGridTextColumn Header="Név" Binding="{Binding Nev}"></DataGridTextColumn>
-                                            <DataGridTextColumn Header="Születési hely" Binding="{Binding Szul_Hely}"></DataGridTextColumn>
-                                            <DataGridTextColumn Header="Születési idő" Binding="{Binding Szul_Ido}"></DataGridTextColumn>
-                                            <DataGridTextColumn Header="Anyja Neve" Binding="{Binding Anya_Nev}"></DataGridTextColumn>
-                                            <DataGridTextColumn Header="Lakcím" Binding="{Binding Lakcim}"></DataGridTextColumn>
-                                            <DataGridTextColumn Header="Osztály" Binding="{Binding Osztaly_ID}"></DataGridTextColumn>
-                                            <DataGridTextColumn Header="Kollégium" Binding="{Binding Koli}"></DataGridTextColumn>
-                                            <DataGridTextColumn Binding="{Binding Torzslapszam}"></DataGridTextColumn>
-                                            <DataGridTemplateColumn>
-                                                <DataGridTemplateColumn.CellTemplate>
-                                                    <DataTemplate>
-                                                        <Button>Törlés</Button>
-                                                    </DataTemplate>
-                                                </DataGridTemplateColumn.CellTemplate>
-                                            </DataGridTemplateColumn>
-                                        </DataGrid.Columns>
-                                    </DataGrid>
+                                </TabItem>
+                                <TabItem Header="Összes Adat">
+                                    <Grid>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition/>
+                                            <RowDefinition Height="10*"/>
+                                            <RowDefinition/>
+                                        </Grid.RowDefinitions>
+                                        <DataGrid Margin="20" x:Name="TanuloAdatokGrid" AutoGenerateColumns="False" Grid.Row="1">
+                                            <DataGrid.Columns>
+                                                <DataGridTextColumn Header="Név" Binding="{Binding Nev}"></DataGridTextColumn>
+                                                <DataGridTextColumn Header="Születési hely" Binding="{Binding Szul_Hely}"></DataGridTextColumn>
+                                                <DataGridTextColumn Header="Születési idő" Binding="{Binding Szul_Ido}"></DataGridTextColumn>
+                                                <DataGridTextColumn Header="Anyja Neve" Binding="{Binding Anya_Nev}"></DataGridTextColumn>
+                                                <DataGridTextColumn Header="Lakcím" Binding="{Binding Lakcim}"></DataGridTextColumn>
+                                                <DataGridTextColumn Header="Osztály" Binding="{Binding Osztaly_ID}"></DataGridTextColumn>
+                                                <DataGridTextColumn Header="Kollégium" Binding="{Binding Koli}"></DataGridTextColumn>
+                                                <DataGridTextColumn Binding="{Binding Torzslapszam}"></DataGridTextColumn>
+                                                <DataGridTemplateColumn>
+                                                    <DataGridTemplateColumn.CellTemplate>
+                                                        <DataTemplate>
+                                                            <Button>Törlés</Button>
+                                                        </DataTemplate>
+                                                    </DataGridTemplateColumn.CellTemplate>
+                                                </DataGridTemplateColumn>
+                                            </DataGrid.Columns>
+                                        </DataGrid>
+                                    </Grid>
                                 </TabItem>
 
                             </TabControl>
                         </Grid>
-                        
+
                     </Grid>
                 </TabItem>
-                <TabItem Header="Security" />
-                <TabItem Header="Details" />
+                <TabItem Header="Órarend" />
+
             </TabControl>
         </Grid>
-       
-        
+
+
 
     </Grid>
 </UserControl>
