API jegy kontroller újragondolva, APP api adatlekérés átgoldolva, módosítása elkezdődött

--- a/VS Solution/IKT_II_Derecske_Holding_EE/Ablakok/Login/LoginPanel.xaml
+++ b/VS Solution/IKT_II_Derecske_Holding_EE/Ablakok/Login/LoginPanel.xaml
@@ -58,6 +58,26 @@
                                                 </DataTemplate>
                                             </ItemsControl.ItemTemplate>
                                         </ItemsControl>
+                                        
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                            <GridViewColumn Header="November">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <ItemsControl ItemsSource="{Binding November}">
+                                            <ItemsControl.ItemsPanel>
+                                                <ItemsPanelTemplate>
+                                                    <StackPanel Orientation="Horizontal"></StackPanel>
+                                                </ItemsPanelTemplate>
+                                            </ItemsControl.ItemsPanel>
+                                            <ItemsControl.ItemTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock Text="{Binding Jegy_Ertek}" ToolTip="{Binding Tema}" Margin="0 0 2 0"></TextBlock>
+                                                </DataTemplate>
+                                            </ItemsControl.ItemTemplate>
+                                        </ItemsControl>
+
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
@@ -66,7 +86,13 @@
                 </ListView>
             </TabItem>
             <TabItem>
-                <Label>LONG LIVE THE ANIMAL FARM</Label>
+                <DataGrid x:Name="jegyekNew" AutoGenerateColumns="False">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Binding="{Binding nev}"></DataGridTextColumn>
+                        <DataGridTextColumn Binding="{Binding jegyek}"></DataGridTextColumn>
+                        <DataGridTextColumn Binding="{Binding newJegy}"></DataGridTextColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
             </TabItem>
         </TabControl>
         <StackPanel Grid.Column="2">
